manifests/prod/llama/Service-llama.yaml
apiVersion: v1
kind: Service
metadata:
  name: llama
  namespace: llama
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8001
  type: ClusterIP
