manifests/prod/llama/Ingress-llama.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: k3s-lan-ca
    gethomepage.dev/description: llama.cpp inference server
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: AI
    gethomepage.dev/icon: mdi-robot
    gethomepage.dev/name: llama
  name: llama
  namespace: llama
spec:
  ingressClassName: traefik
  rules:
    - host: llama.k3s.lan
      http:
        paths:
          - backend:
              service:
                name: llama
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - llama.k3s.lan
      secretName: llama-tls
